updated text for GFF export box

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -583,7 +583,7 @@ function export_gff () {
 <DIV class="dialog" title="GFF Exporter" id="gff_export">
 <table class=small>
  <tr>
-   <td>Do not generate feature ncRNA genes (CDS genes only)</td>
+   <td>Do not generate features for ncRNA genes (CDS genes only)</td>
    <td><input type=checkbox name="cds_only" id="cds_only"></td>
  </tr>
  <tr>
