--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -377,7 +377,8 @@ function get_feat_gc(opts){
  hist_type = $('#feat_hist_type').val();
  dsid = opts.dsid;
  dsgid = $('#dsg_id').val();
-  
+ $('#gc_histogram').html('loading. . .');
+
  $.ajax({
    data: {
 	  jquery_ajax: 1,
@@ -392,10 +393,20 @@ function get_feat_gc(opts){
          },
    success: function(data) {$('#gc_histogram').html(data);}
  });
- $('#gc_histogram').html('loading. . .');
 
 }
 
+function chr_hist (dsgid){
+   $('#chromosome_hist').html('loading. . .');
+  $.ajax({
+   data: {
+          jquery_ajax: 1,
+          fname: 'get_chr_length_hist',
+	  dsgid: dsgid,
+	  },
+   success: function (data) {$('#chromosome_hist').html(data);}
+  });
+}
 
 function search_bar(div_id){
   if($('#'+div_id).val() == "Search") $('#'+div_id).val("").css({fontStyle: "normal"});
@@ -563,6 +574,7 @@ function export_gff () {
 <div class="dialog_box" id="codon_usage_table" title="Codon Usage Table"></div>
 <div class="dialog_box" id="aa_usage_table" title="Amino Acid Usage Table"></div>
 <div class="dialog_box" id="edit_genome_info" title="Edit Genome Information"></div>
+<div class="dialog_box" id="chromosome_hist" title="Chromosome Size"></div>
 
 
 
