added link to SynFind

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -134,6 +134,7 @@ $(document).ready( function() {
 	  <li><a href="OrganismView.pl" target="_self">OrganismView</a></li>
 	  <li><a href="CoGeBlast.pl" target="_self">CoGeBlast</a></li>
 	  <li><a href="FeatView.pl" target="_self">FeatView</a></li>
+	  <li><a href="SynFind.pl" target="_self">SynFind</a></li>
 	  <li><a href="SynMap.pl" target="_self">SynMap</a></li>
 	  <li><a href="GEvo.pl" target="_self">GEvo</a></li>
 
