removed link to downloads; added links to forums

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -137,18 +137,22 @@ $(document).ready( function() {
 	  <li><a href="SynFind.pl" target="_self">SynFind</a></li>
 	  <li><a href="SynMap.pl" target="_self">SynMap</a></li>
 	  <li><a href="GEvo.pl" target="_self">GEvo</a></li>
+	 </ul>
+	</li>
 
 <!--	  <li><a href="MSAView.pl" target="_self">MSAView</a></li>
 	  <li><a href="TreeView.pl" target="_self">TreeView</a></li>-->
-      </ul>
-	</li>
+<!--      </ul>
 	<li><a href='javascript:void(0)'>Downloads</a>
 	 <ul>	   
 	  <li><a href="/wiki/index.php/Syntenic_gene_sets" target="_self">Syntenic gene sets</a></li>
 	  <li><a href="/wiki/index.php/Source_code" target="_self">CoGe Source Code</a></li>
 
-	 </ul>
-	</li>	<li><a href='javascript:void(0)'>Preferences</a>
+
+	</li>	
+-->
+        <li><a id=forums href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_self">Forums</a></li>
+	<li><a href='javascript:void(0)'>Preferences</a>
 	 <ul>
 	   <li><a href="UserPage.pl" target="_self">User Profile</a></li>
 	   <li><a href="Groups.pl" target="_self">User/Data Groups</a></li>
@@ -166,6 +170,7 @@ $(document).ready( function() {
 	 <ul>
 	      <li><a href="/wiki" target="_blank">CoGePedia</a></li>
 	      <li><a href="<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
+	      <li><a href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_blank">Forums</a></li>
 	      <li><a href="/wiki/index.php/FAQs" target="_blank">About CoGe</a></li>
 	      <li><a href="/wiki/index.php/Tutorials" target="_blank">Tutorials</a></li>
 	      <li><a href="/wiki/index.php/Contact_Page" target="_blank">Contact or Cite Us</a></li>
