minor change to text

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -841,7 +841,7 @@ function rand ()
 
      <div class=small>
 <!--     Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" />-->
-     Apply distance to all CoGe submissions?<input type="textbox" size=8 name="apply_all" id="apply_all" value="<TMPL_VAR NAME="APPLY_ALL">" />
+     Apply distance to all CoGe submissions: <input type="textbox" size=8 name="apply_all" id="apply_all" value="<TMPL_VAR NAME="APPLY_ALL">" />
      &nbsp&nbsp&nbsp&nbsp
      Pad CoGe Sequences with additional sequence: <input type="textbox" name="pad_gs" id="pad_gs" value="<TMPL_VAR NAME="PAD_GS">" size =8/>
 
